@@ -1,3 +1,3 @@
 Makefile
 Makefile.in
-default.eet
+default.edj
